diesel-builders/tests/ui/repeated_ancestor_error.stderr
error: Duplicate ancestor in hierarchy
  --> tests/ui/repeated_ancestor_error.rs:11:84
   |
11 | #[derive(Debug, Queryable, Clone, Selectable, Identifiable, PartialEq, PartialOrd, TableModel)]
   |                                                                                    ^^^^^^^^^^
   |
   = note: this error originates in the derive macro `TableModel` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `dogs`
  --> tests/ui/repeated_ancestor_error.rs:12:23
   |
12 | #[diesel(table_name = dogs)]
   |                       ^^^^ use of unresolved module or unlinked crate `dogs`
   |
   = help: if you wanted to use a crate named `dogs`, use `cargo add dogs` to add it to your `Cargo.toml`
